Fix mobile overflow

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -220,12 +220,12 @@ div .highlight {
 }
 
 .copyable {
-  display: inline-flex;
+  display: flex;
   @include border-radius(0.4em);
 
   .highlight {
-    flex-grow: 1;
-    margin-bottom: 0;
+    overflow-x: auto;
+    margin: 0;
     pre {
       @include border-side-radius("right", 0);
       margin: 0;
@@ -242,6 +242,14 @@ div .highlight {
 
   button:hover {
     background: $color_dallas_approx;
+  }
+}
+
+.install {
+  display: flex;
+  align-items: center;
+  .label {
+    padding-right: 0.4em;
   }
 }
 
